// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Select rendering renders expected elements 1`] = `
<React.Fragment>
  <Layer
    aria-activedescendant={null}
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns={null}
    className="Select__text Test"
    data-placeholder="Testing"
    id="random-id"
    onBlur={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex="0"
  >
    <span
      className="Select__value"
    >
      Two
    </span>
    <SelectArrow
      className="Select__arrow"
      open={false}
    />
  </Layer>
</React.Fragment>
`;

exports[`Select rendering renders expected elements when className is not set 1`] = `
<React.Fragment>
  <Layer
    aria-activedescendant={null}
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns={null}
    className="Select__text"
    data-placeholder="Testing"
    id="random-id"
    onBlur={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex="0"
  >
    <span
      className="Select__value"
    >
      Two
    </span>
    <SelectArrow
      className="Select__arrow"
      open={false}
    />
  </Layer>
</React.Fragment>
`;

exports[`Select rendering renders expected elements when disabled is true 1`] = `
<React.Fragment>
  <Layer
    aria-activedescendant={null}
    aria-disabled={true}
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns={null}
    className="Select__text Test"
    data-placeholder="Testing"
    id="random-id"
    onBlur={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex="-1"
  >
    <span
      className="Select__value"
    >
      Two
    </span>
    <SelectArrow
      className="Select__arrow"
      open={false}
    />
  </Layer>
</React.Fragment>
`;

exports[`Select rendering renders expected elements when error is true 1`] = `
<React.Fragment>
  <Layer
    aria-activedescendant={null}
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-invalid={true}
    aria-owns={null}
    className="Select__text Test"
    data-placeholder="Testing"
    id="random-id"
    onBlur={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex="0"
  >
    <span
      className="Select__value"
    >
      Two
    </span>
    <SelectArrow
      className="Select__arrow"
      open={false}
    />
  </Layer>
</React.Fragment>
`;

exports[`Select rendering renders expected elements when noLayer is true 1`] = `
<React.Fragment>
  <Layer
    aria-activedescendant={null}
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns={null}
    className="Select__text Test"
    data-placeholder="Testing"
    id="random-id"
    noLayer={true}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex="0"
  >
    <span
      className="Select__value"
    >
      Two
    </span>
    <SelectArrow
      className="Select__arrow"
      open={false}
    />
  </Layer>
</React.Fragment>
`;

exports[`Select rendering renders expected elements when open is true 1`] = `
<React.Fragment>
  <Layer
    aria-activedescendant="random-id-1"
    aria-expanded={true}
    aria-haspopup="listbox"
    aria-owns="random-id-list"
    className="Select__text Test"
    data-placeholder="Testing"
    id="random-id"
    onBlur={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex="0"
  >
    <span
      className="Select__value"
    >
      Two
    </span>
    <SelectArrow
      className="Select__arrow"
      open={true}
    />
  </Layer>
  <React.Portal
    container="body"
  >
    <Layer
      className="Select__list"
      id="random-id-list"
      level={NaN}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="listbox"
    >
      <div
        aria-selected={false}
        className="Select__option"
        data-index={0}
        id="random-id-0"
        role="option"
      >
        One
      </div>
      <div
        aria-selected={true}
        className="Select__option"
        data-index={1}
        id="random-id-1"
        role="option"
      >
        Two
      </div>
      <div
        aria-selected={false}
        className="Select__option"
        data-index={2}
        id="random-id-2"
        role="option"
      >
        Three
      </div>
    </Layer>
  </React.Portal>
</React.Fragment>
`;

exports[`Select rendering renders expected elements when open is true and document.fullscreenElement is set 1`] = `
<React.Fragment>
  <Layer
    aria-activedescendant="random-id-1"
    aria-expanded={true}
    aria-haspopup="listbox"
    aria-owns="random-id-list"
    className="Select__text Test"
    data-placeholder="Testing"
    id="random-id"
    onBlur={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex="0"
  >
    <span
      className="Select__value"
    >
      Two
    </span>
    <SelectArrow
      className="Select__arrow"
      open={true}
    />
  </Layer>
  <React.Portal
    container="fullscreen"
  >
    <Layer
      className="Select__list"
      id="random-id-list"
      level={NaN}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="listbox"
    >
      <div
        aria-selected={false}
        className="Select__option"
        data-index={0}
        id="random-id-0"
        role="option"
      >
        One
      </div>
      <div
        aria-selected={true}
        className="Select__option"
        data-index={1}
        id="random-id-1"
        role="option"
      >
        Two
      </div>
      <div
        aria-selected={false}
        className="Select__option"
        data-index={2}
        id="random-id-2"
        role="option"
      >
        Three
      </div>
    </Layer>
  </React.Portal>
</React.Fragment>
`;

exports[`Select rendering renders expected elements when options are booleans 1`] = `
<React.Fragment>
  <Layer
    aria-activedescendant={null}
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns={null}
    className="Select__text Test"
    data-placeholder="Testing"
    id="random-id"
    onBlur={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex="0"
  >
    <span
      className="Select__value"
    >
      No
    </span>
    <SelectArrow
      className="Select__arrow"
      open={false}
    />
  </Layer>
</React.Fragment>
`;

exports[`Select rendering renders expected elements when value is not set 1`] = `
<React.Fragment>
  <Layer
    aria-activedescendant={null}
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns={null}
    className="Select__text Select__text--empty Test"
    data-placeholder="Testing"
    id="random-id"
    onBlur={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex="0"
  >
    <span
      className="Select__value"
    />
    <SelectArrow
      className="Select__arrow"
      open={false}
    />
  </Layer>
</React.Fragment>
`;
